--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
-    <%- body %>
+    <%- include('../partials/header.ejs') %> <%- body %> <%-
+    include('../partials/footer.ejs') %>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
