--- a/public/css/main.css
+++ b/public/css/main.css
@@ -74,7 +74,12 @@ h6 {
 }
 
 /* Home */
-.home {
+@media (min-width: 1200px) {
+  .home {
+    background: url('../img/human-1.svg') left bottom no-repeat,
+      url('../img/human-2.svg') right bottom no-repeat,
+      url('../img/noise-bg.png') left top repeat, var(--background-color);
+  }
 }
 
 .home-title::before {
